--- a/app/src/main/res/layout/item_act_podcast.xml
+++ b/app/src/main/res/layout/item_act_podcast.xml
@@ -1,60 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/root_layout_item_act_podcast"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="10dp"
-        android:background="@drawable/bg_border"
+        android:layout_marginBottom="5dp"
         android:orientation="vertical">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            >
-
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/item_act_podcast_videoThumbnail"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/app_icon" />
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="10dp"
+            android:background="@drawable/bg_border"
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/black_high_opacity"
-                >
+                android:layout_height="250dp">
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/ic_baseline_play_circle_filled_24" />
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/item_act_podcast_videoThumbnail"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/app_icon" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/black_high_opacity">
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_baseline_play_circle_filled_24" />
+                </RelativeLayout>
+
+
+                <TextView
+                    android:id="@+id/item_act_podcast_videoTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:padding="8dp"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                    android:textColor="@color/white"
+                    tools:text="Sample Title" />
             </RelativeLayout>
 
-
-            <TextView
-                android:id="@+id/item_act_podcast_videoTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:textColor="@color/white"
-                android:layout_alignParentBottom="true"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-                tools:text="Sample Title" />
-        </RelativeLayout>
-
-    </LinearLayout>
+        </LinearLayout>
 
 
-
-
-
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
