--- a/app/src/main/res/layout/item_act_podcast.xml
+++ b/app/src/main/res/layout/item_act_podcast.xml
@@ -7,7 +7,7 @@
         android:id="@+id/root_layout_item_act_podcast"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -15,14 +15,15 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="10dp"
-            android:background="@drawable/bg_border"
+            android:background="@android:color/transparent"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="250dp">
+                android:layout_height="250dp"
+                android:background="@android:color/transparent">
 
-                <com.makeramen.roundedimageview.RoundedImageView
+                <ImageView
                     android:id="@+id/item_act_podcast_videoThumbnail"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
@@ -32,7 +33,8 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/black_high_opacity">
+                    android:background="@drawable/bg_border"
+                    android:backgroundTint="@color/black_high_opacity">
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="45dp"
