--- a/app/src/main/res/layout/item_act_sample.xml
+++ b/app/src/main/res/layout/item_act_sample.xml
@@ -7,35 +7,41 @@
         android:id="@+id/root_layout_item_act_sample"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:orientation="vertical"
-        android:layout_marginBottom="5dp"
         android:padding="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_border"
             android:orientation="vertical"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
 
-            <RelativeLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="250dp">
 
-                <com.makeramen.roundedimageview.RoundedImageView
+                <ImageView
                     android:id="@+id/videoThumbnail"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/app_icon" />
+                    android:src="@drawable/app_icon"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/black_high_opacity">
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:backgroundTint="@color/black_high_opacity"
+                    android:background="@drawable/bg_border"
+                    app:layout_constraintBottom_toBottomOf="@id/videoThumbnail"
+                    app:layout_constraintRight_toRightOf="@id/videoThumbnail"
+                    app:layout_constraintLeft_toLeftOf="@id/videoThumbnail"
+                    app:layout_constraintTop_toTopOf="@id/videoThumbnail">
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="45dp"
@@ -49,13 +55,14 @@
                     android:id="@+id/videoTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     android:padding="8dp"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     tools:text="Sample Title" />
-            </RelativeLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
