--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -51,7 +51,10 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:visibility="@{loginViewModel.showLoginProgress ? View.INVISIBLE : View.VISIBLE}"
                 app:cornerRadius="16dp"
-                app:layout_constraintStart_toStartOf="@+id/mainLoginPassword"
+                app:layout_constraintEnd_toStartOf="@+id/mainForgotPassword"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_weight=".8"
+                app:layout_constraintStart_toStartOf="@id/mainLoginPassword"
                 app:layout_constraintTop_toBottomOf="@+id/mainLoginPassword" />
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
@@ -68,14 +71,17 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/mainForgotPassword"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:enabled="@{loginViewModel.enableInput}"
                 android:text="@string/forgot_password"
                 android:textColor="@color/textGrey"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/mainLoginButton"
-                app:layout_constraintEnd_toEndOf="@+id/mainLoginPassword"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toEndOf="@+id/mainLoginButton"
                 app:layout_constraintTop_toTopOf="@+id/mainLoginButton" />
 
 
@@ -87,8 +93,8 @@
                 android:fontFamily="@font/montserrat"
                 android:text="@string/or_log_in_with"
                 android:textColor="@color/textGrey"
-                android:visibility="gone"
                 android:textSize="12sp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -100,11 +106,11 @@
                 android:layout_height="32dp"
                 android:layout_marginStart="64dp"
                 android:layout_marginTop="24dp"
-                android:visibility="gone"
                 android:background="#fff"
                 android:contentDescription="@string/facebook"
                 android:enabled="@{loginViewModel.enableInput}"
                 android:scaleType="fitXY"
+                android:visibility="gone"
                 app:layout_constraintEnd_toStartOf="@id/main_google_login"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/main_or_login_with"
@@ -115,11 +121,11 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginEnd="64dp"
-                android:visibility="gone"
                 android:background="#fff"
                 android:contentDescription="@string/google"
                 android:enabled="@{loginViewModel.enableInput}"
                 android:scaleType="fitXY"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/main_facebook_login"
                 app:layout_constraintTop_toTopOf="@+id/main_facebook_login"
@@ -142,7 +148,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:visibility="gone"
                     android:enabled="@{loginViewModel.enableInput}"
                     android:fontFamily="@font/montserrat"
                     android:paddingHorizontal="16dp"
@@ -150,6 +155,7 @@
                     android:text="@string/sign_in_as_doctor"
                     android:textAllCaps="false"
                     android:textSize="14sp"
+                    android:visibility="gone"
                     app:cornerRadius="16dp" />
 
                 <com.google.android.material.button.MaterialButton
@@ -158,7 +164,6 @@
                     android:layout_height="match_parent"
                     android:layout_marginStart="16dp"
                     android:layout_weight="1"
-                    android:visibility="gone"
                     android:enabled="@{loginViewModel.enableInput}"
                     android:fontFamily="@font/montserrat"
                     android:paddingHorizontal="16dp"
@@ -166,7 +171,7 @@
                     android:text="@string/nanny_mode"
                     android:textAllCaps="false"
                     android:textSize="14sp"
-                   />
+                    android:visibility="gone" />
 
             </LinearLayout>
 
