--- a/app/src/main/res/layout/item_act_podcast.xml
+++ b/app/src/main/res/layout/item_act_podcast.xml
@@ -18,6 +18,21 @@
             android:background="@android:color/transparent"
             android:orientation="vertical">
 
+
+            <TextView
+                android:id="@+id/item_act_podcast_videoTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                tools:text="Sample Title" />
+
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
@@ -32,7 +47,7 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="250dp"
                     android:background="@drawable/bg_border"
                     android:backgroundTint="@color/black_high_opacity">
 
@@ -44,15 +59,6 @@
                 </RelativeLayout>
 
 
-                <TextView
-                    android:id="@+id/item_act_podcast_videoTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:padding="8dp"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-                    android:textColor="@color/white"
-                    tools:text="Sample Title" />
             </RelativeLayout>
 
         </LinearLayout>
