--- a/app/src/main/res/layout/item_act_sample.xml
+++ b/app/src/main/res/layout/item_act_sample.xml
@@ -11,13 +11,29 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/videoTitle"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Sample Title" />
+
+
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/videoTitle">
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -36,11 +52,11 @@
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:backgroundTint="@color/black_high_opacity"
                     android:background="@drawable/bg_border"
+                    android:backgroundTint="@color/black_high_opacity"
                     app:layout_constraintBottom_toBottomOf="@id/videoThumbnail"
-                    app:layout_constraintRight_toRightOf="@id/videoThumbnail"
                     app:layout_constraintLeft_toLeftOf="@id/videoThumbnail"
+                    app:layout_constraintRight_toRightOf="@id/videoThumbnail"
                     app:layout_constraintTop_toTopOf="@id/videoThumbnail">
 
                     <androidx.appcompat.widget.AppCompatImageView
@@ -49,19 +65,6 @@
                         android:layout_centerInParent="true"
                         android:src="@drawable/ic_baseline_play_circle_filled_24" />
                 </RelativeLayout>
-
-
-                <TextView
-                    android:id="@+id/videoTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:padding="8dp"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
-                    tools:text="Sample Title" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
