Worked on New Bug from AllTicketsFragment.kt and ViewTicket.kt status:Success

--- a/app/src/main/res/layout/view_ticket_fragment.xml
+++ b/app/src/main/res/layout/view_ticket_fragment.xml
@@ -68,14 +68,14 @@
 
                 <EditText
                     android:id="@+id/ticket_view_new_message"
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:padding="10dp"
+                    android:layout_margin="10dp"
                     android:cursorVisible="true"
                     android:hint="Type a message"
+                    android:background="@null"
                     android:inputType="textPersonName"
-                    android:background="@drawable/edit_rectangle"
                     android:visibility="visible" />
 
                 <ImageButton
@@ -129,15 +129,15 @@
             android:text="some id"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
             <TextView
                 android:id="@+id/ticket_view_ticket_number"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_weight="1"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="some id"
@@ -146,11 +146,13 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/status_show"
-                android:layout_width="60dp"
+                android:layout_width="match_parent"
                 android:layout_height="18dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginTop="5dp"
                 android:textStyle="bold"
+                android:layout_weight=".5"
                 android:background="@drawable/round_rectangle"
                 android:text="open"
                 android:textAllCaps="false"
