--- a/app/src/main/res/layout/ticket_list_item.xml
+++ b/app/src/main/res/layout/ticket_list_item.xml
@@ -1,55 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ticket_item_ticket_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/ticket_item_title"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="skkakssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss"
+        android:ems="10"
+        tools:text="testing the code file hello ji how are u"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/type_ticket"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/status_show"
         app:layout_constraintTop_toTopOf="@id/status_show" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/status_show"
         android:layout_width="60dp"
         android:layout_height="18dp"
-        android:layout_marginStart="5dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/round_rectangle"
-        android:text="open"
+        tools:text="open"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="8sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/ticket_item_title"
+        app:layout_constraintRight_toLeftOf="@id/ticket_item_details"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/type_ticket"
         android:layout_width="60dp"
         android:layout_height="22dp"
-        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/round_rectangle"
         android:paddingHorizontal="5dp"
-        android:text="Expert"
+        tools:text="Expert"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="8sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ticket_item_title"
+        app:layout_constraintLeft_toLeftOf="@+id/status_show"
         app:layout_constraintTop_toBottomOf="@id/status_show" />
 
 
@@ -57,11 +58,13 @@
         android:id="@+id/ticket_item_details"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Details"
+        android:layout_marginEnd="6dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="0dp"
+        tools:text="Details"
         android:textColor="#3ea6e4"
         app:layout_constraintBottom_toBottomOf="@+id/ticket_item_title"
-        app:layout_constraintStart_toEndOf="@id/status_show"
+        app:layout_constraintRight_toLeftOf="@id/arrowBtn"
         app:layout_constraintTop_toTopOf="@+id/ticket_item_title" />
 
     <ImageView
@@ -70,11 +73,12 @@
         android:layout_height="20dp"
         android:layout_marginEnd="8dp"
         android:src="@drawable/arrow"
-        app:tint="@color/black"
         app:layout_constraintBottom_toBottomOf="@id/type_ticket"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/status_show" />
-    <!--    android:src="@mipmap/arrow_right_round"-->
+        app:layout_constraintTop_toTopOf="@+id/status_show"
+        app:tint="@color/black" />
+    <!--    android:src="@mipmap/arrow_right_round"
+     New Other Layout-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ticket_item_details_layout"
         android:layout_width="match_parent"
