--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -230,5 +230,11 @@
         <item name="android:windowCloseOnTouchOutside">false</item>
     </style>
 
+    <style name="customTabLayout" parent="Widget.Design.TabLayout">
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/crimson_text_bold</item>
+    </style>
 
 </resources>
