--- a/app/src/main/res/layout/demo_module_item_layout.xml
+++ b/app/src/main/res/layout/demo_module_item_layout.xml
@@ -32,9 +32,8 @@
 
             <ImageButton
                 android:id="@+id/arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:background="@android:color/transparent"
                 android:src="@drawable/ic_keyboard_arrow_down"
                 android:tint="@color/black"
