--- a/app/src/main/res/layout/free_demo_video_module_fragments.xml
+++ b/app/src/main/res/layout/free_demo_video_module_fragments.xml
@@ -13,6 +13,7 @@
             android:id="@+id/recycle_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scrollbars="vertical"
             android:visibility="gone"
             tools:listitem="@layout/demo_module_item_layout"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
