--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -9,10 +9,57 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="customTabLayout" parent="Widget.Design.TabLayout">
-        <item name="textAllCaps">false</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:fontFamily">@font/crimson_text_bold</item>
+
+    <style name="MyThemeOverlay.MaterialComponents.MaterialAlertDialog.simple" parent="@style/ThemeOverlay.MaterialComponents.MaterialAlertDialog">
+        <item name="buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
+        <item name="buttonBarNegativeButtonStyle">@style/NegButtonStyle</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="materialAlertDialogTitleTextStyle">
+            @style/MyTitle_MaterialAlertDialog.MaterialComponents.Title.Text
+        </item>
+        <item name="materialAlertDialogBodyTextStyle">
+            @style/BodyTextAppearance.MaterialComponents.Body2
+        </item>
+        <item name="android:background">#E0EDFF</item>
     </style>
+
+
+    <style name="PositiveButtonStyle" parent="@style/Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/darkBlue</item>
+        <item name="android:fontFamily">@font/crimson_text_bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+        <item name="backgroundTint">@android:color/transparent</item>
+    </style>
+
+    <style name="NegButtonStyle" parent="@style/Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/darkBlue</item>
+        <item name="android:fontFamily">@font/crimson_text_bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="backgroundTint">@android:color/transparent</item>
+    </style>
+
+
+    <style name="MyTitle_MaterialAlertDialog.MaterialComponents.Title.Text" parent="@style/MaterialAlertDialog.MaterialComponents.Title.Text">
+        <item name="android:textColor">@color/light_grey_color</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/montserrat</item>
+    </style>
+
+    <style name="BodyTextAppearance.MaterialComponents.Body2" parent="@style/MaterialAlertDialog.MaterialComponents.Body.Text">
+        <item name="android:textColor">@color/light_grey_color</item>
+        <item name="fontFamily">@font/montserrat</item>
+    </style>
+
+
+    <!--    <style name="customTabLayout" parent="Widget.Design.TabLayout">
+            <item name="textAllCaps">false</item>
+            <item name="android:textSize">14sp</item>
+            <item name="android:textColor">@color/black</item>
+            <item name="android:fontFamily">@font/crimson_text_bold</item>
+        </style>-->
+
+
+
+
 </resources>
