Removed some bug from Profile status:Success

--- a/app/src/main/res/layout/free_demo_dashboard_screen_framgent.xml
+++ b/app/src/main/res/layout/free_demo_dashboard_screen_framgent.xml
@@ -158,9 +158,9 @@
                             android:id="@+id/textView4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="6dp"
+                            android:layout_marginStart="4dp"
                             android:layout_marginTop="14dp"
-                            android:layout_marginEnd="14dp"
+                            android:layout_marginEnd="4dp"
                             android:text="Name:"
                             android:textColor="@color/timeDisplayWhite"
                             android:textSize="13sp"
@@ -171,8 +171,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="14dp"
+                            android:maxLines="1"
+                            android:ellipsize="end"
+                            tools:text="jgklfldkgfjgdgkfgjfkdlgkldfgjklfd"
                             android:layout_marginEnd="10dp"
-                            android:text="Anuj Rai"
                             android:textColor="@color/timeDisplayWhite"
                             android:textSize="13sp"
                             android:textStyle="bold" />
@@ -191,9 +193,9 @@
                             android:id="@+id/phone_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="6dp"
+                            android:layout_marginStart="4dp"
                             android:layout_marginTop="4dp"
-                            android:layout_marginEnd="14dp"
+                            android:layout_marginEnd="4dp"
                             android:text="Phone:"
                             android:textColor="@color/timeDisplayWhite"
                             android:textSize="13sp"
@@ -203,9 +205,11 @@
                             android:id="@+id/profile_phone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            tools:text="12345677"
                             android:layout_marginTop="4dp"
+                            android:maxLines="1"
+                            android:ellipsize="end"
                             android:layout_marginBottom="13dp"
-                            android:text="+91213456789"
                             android:textColor="@color/timeDisplayWhite"
                             android:textSize="13sp"
                             android:textStyle="bold" />
