Working on Bottom Nav

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -72,5 +72,6 @@
 
     //FreeDemo Parenting
     <color name="light_grey_color">#707070</color>
+    <color name="grey_color">#B1ACAC</color>
 
 </resources>
