--- a/app/src/main/res/menu/free_parenting_btom_nav.xml
+++ b/app/src/main/res/menu/free_parenting_btom_nav.xml
@@ -15,7 +15,7 @@
 
 
     <item
-        android:id="@+id/toolKitAndReviewFragment"
+        android:id="@+id/DailyBookFragment"
         android:enabled="true"
         android:icon="@drawable/ic_calendar"
         android:title="Daybook" />
