--- a/app/src/main/res/drawable/tab_bg_unselected.xml
+++ b/app/src/main/res/drawable/tab_bg_unselected.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape>
-            <solid android:color="@color/black" />
-        </shape>
-    </item>
     <item
         android:bottom="1dp"
         android:left="0dp"
         android:right="0dp"
         android:top="0dp">
         <shape>
-            <solid android:color="@color/white" />
+            <solid android:color="@android:color/transparent" />
         </shape>
     </item>
 </layer-list>
