--- a/app/src/main/res/drawable/tab_bg_selected.xml
+++ b/app/src/main/res/drawable/tab_bg_selected.xml
@@ -5,12 +5,14 @@
         android:right="0dp"
         android:top="0dp"
         android:bottom="0dp">
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <solid
-                android:color="@color/link"/>
+                android:color="#1AA6C5"/>
+
+            <corners android:radius="20dp" />
             <stroke
                 android:width="2dp"
-                android:color="@color/darkBlue"
+                android:color="#1AA6C5"
                 />
         </shape>
     </item>
