--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -51,13 +51,6 @@
         <item name="android:windowIsFloating">true</item>
     </style>
 
-
-    <style name="customTabLayout" parent="Widget.Design.TabLayout">
-        <item name="textAllCaps">false</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:fontFamily">@font/montserrat</item>
-    </style>
-
     <style name="MyTitle_MaterialAlertDialog.MaterialComponents.Title.Text" parent="@style/MaterialAlertDialog.MaterialComponents.Title.Text">
         <item name="android:textColor">@color/light_grey_color</item>
         <item name="android:textStyle">bold</item>
@@ -77,7 +70,12 @@
             <item name="android:fontFamily">@font/crimson_text_bold</item>
         </style>-->
 
-
+    <style name="customTabLayout" parent="Widget.Design.TabLayout">
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/crimson_text_bold</item>
+    </style>
 
 
 </resources>
