--- a/app/src/main/res/drawable/tab_bg_selected.xml
+++ b/app/src/main/res/drawable/tab_bg_selected.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:bottom="0dp"
         android:left="0dp"
-        android:right="0dp"
-        android:top="0dp"
-        android:bottom="0dp">
+        android:right="5dp"
+        android:top="0dp">
         <shape android:shape="rectangle">
-            <solid
-                android:color="#1AA6C5"/>
-
-            <corners android:radius="20dp" />
+            <solid android:color="#1AA6C5" />
+            <corners android:radius="10dp" />
             <stroke
                 android:width="2dp"
-                android:color="#1AA6C5"
-                />
+                android:color="#1AA6C5" />
         </shape>
     </item>
 </layer-list>
