--- a/app/src/main/res/drawable/tab_bg_unselected.xml
+++ b/app/src/main/res/drawable/tab_bg_unselected.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:bottom="1dp"
+        android:bottom="0dp"
         android:left="0dp"
-        android:right="0dp"
+        android:right="5dp"
         android:top="0dp">
-        <shape>
+        <shape android:shape="rectangle">
+
             <solid android:color="@android:color/transparent" />
+            <corners android:radius="10dp" />
+            <stroke
+                android:width="1dp"
+                android:color="#1AA6C5" />
         </shape>
     </item>
 </layer-list>
