Working on Daily Content Fragments status:Successfully

--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -30,17 +30,17 @@
                     android:id="@+id/nameToolbar"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_marginStart="15dp"
                     android:layout_weight="1"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/crimson_text_bold"
-                    android:text="Intro to Parenting Program"
                     android:ellipsize="end"
+                    android:fontFamily="@font/crimson_text_bold"
                     android:maxLines="1"
-                    android:textStyle="bold"
+                    android:text="Intro to Parenting Program"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textColor="@color/black"
                     android:textSize="17sp"
+                    android:textStyle="bold"
                     tools:text="Name" />
 
                 <ImageButton
@@ -65,6 +65,8 @@
             android:layout_alignLeft="@id/appBarLayout"
             android:layout_alignRight="@id/appBarLayout"
             android:layout_alignParentBottom="true"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:background="@color/white"
             android:scrollbars="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
