--- a/app/src/main/res/layout/daily_content_fragment.xml
+++ b/app/src/main/res/layout/daily_content_fragment.xml
@@ -14,6 +14,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
+            android:textStyle="bold"
             android:fontFamily="@font/crimson_text_bold"
             android:maxLines="1"
             android:text="Intro Free Unlock Genius"
@@ -195,6 +196,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:ellipsize="end"
+            android:textStyle="bold"
             android:fontFamily="@font/crimson_text_bold"
             android:maxLines="1"
             android:text="Intro Free Unlock Genius"
